--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
-  
+    <meta name="referrer" content="no-referrer">
     <title>Filip Huhta | Developer</title>
     <meta name="keywords"
       content="filiphuhta.se, Filip Huhta, React, Angular, Java, C#, SQL, JavaScript, TypeScript, HTML, CSS, SaSS, " />
